src/objects/Fundraiser__c.object
<CustomObject>
    <fields>
        <fullName>SuppLink1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier-Link-1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Fundraisers (Product)</relationshipLabel>
        <relationshipName>Fundraisers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Fundraisers</relationshipLabel>
        <relationshipName>Fundraisers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_1__c</fullName>
        <formula>SuppLink1__r.Supplier__c</formula>
        <label>Supplier 1</label>
        <type>Text</type>
    </fields>
    <label>Tech Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fundraiser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>